[package]
name = "serial-console"
version = "1.3.0"
authors = ["Hendrik Wolff <hendrik.wolff@agdsn.me>"]
license = "MIT"
repository = "https://gitlab.com/w0lff/serial-console"
description = "A command line tool to communicate with a serial console"
categories = ["command-line-utilities"]
keywords = ["cli", "serial", "console", "rs232"]
edition = "2024"
exclude = ["aur/"]

[dependencies]
clap = { version = "4.5.46", features = ["derive"] }
serialport = "4.7.3"
termion = "4.0.5"

[profile.lto]
inherits = "release"
lto = "fat"

[[bin]]
name = "scip"
path = "src/main.rs"
